# pepper

./: .gitignore  .gitmodules  AUTHORS  CREDITS  ChangeLog  INSTALL  Makefile.am  README  ROADMAP  autogen.sh  build  configure.ac  flake.nix  highlight.css  index.html  publish  setup  style.css
contrib/web/: distweb.sh  genexamples.sh
docs/: .gitignore  CACHE  Makefile.am  manpage.txt
docs/lua/: diffstat.luadoc  gnuplot.luadoc  iterator.luadoc  pepper.luadoc  report.luadoc  repository.luadoc  revision.luadoc  tag.luadoc  utils.luadoc
documentation/: README  index.html
documentation/api/: index.html
documentation/api/modules/: pepper.datetime.html  pepper.diffstat.html  pepper.gnuplot.html  pepper.html  pepper.iterator.html  pepper.plotutils.html  pepper.report.html  pepper.repository.html  pepper.revision.html  pepper.tag.html  pepper.utils.html
documentation/manpage/: index.html
documentation/porting-02-03/: index.html
download/: ChangeLog  index.html
gallery/: .gnuplot  index.html
index/: news.rss
m4/: ax_check_zlib.m4  ax_lua.m4  ax_python_devel.m4  configure_backends.m4  configure_features.m4  find_lua.m4  find_svn.m4
news/: index.html  news.rss
news/aur-package/: index.html
news/new-homepage/: index.html
news/new-packages-debian-ubuntu/: index.html
news/pepper-0.1/: index.html
news/pepper-0.1.1/: index.html
news/pepper-0.1.2/: index.html
news/pepper-0.1.3/: index.html
news/pepper-0.1.4/: index.html
news/pepper-0.1.5/: index.html
news/pepper-0.2/: index.html
news/pepper-0.2.1/: index.html
news/pepper-0.2.2/: index.html
news/pepper-0.2.3/: index.html
news/pepper-0.2.4/: index.html
news/pepper-0.3/: index.html
news/pepper-0.3.1/: index.html
news/pepper-0.3.2/: index.html
news/pepper-0.3.3/: index.html
news/statistics-web-server/: index.html
recentchanges/: index.html
reports/: Makefile.am  activity.lua  age.lua  authors.lua  authors_pie.lua  branches.lua  check_cache.lua  commit_counts.lua  commit_scatter.lua  commits_per_month.lua  csv.lua  data.lua  diffstat.lua  directories.lua  filetypes.lua  gui.lua  heads.lua  iteration_time.lua  loc.lua  participation.lua  punchcard.lua  revdump.lua  shortlog.lua  tags.lua  test.lua  times.lua  volume.lua
reports/pepper/: Makefile.am  datetime.lua  plotutils.lua
scriptingguide/: index.html
scripts/: genexamples.py  genexamples.rb  make_examples.sh
src/: Makefile.am  abstractcache.cpp  abstractcache.h  backend.cpp  backend.h  bstream.cpp  bstream.h  cache.cpp  cache.h  diffstat.cpp  diffstat.h  documentation.mdwn  download.mdwn  gallery.mdwn  globals.cpp  globals.h  gnuplot.cpp  gnuplot.h  index.mdwn  jobqueue.h  ldbcache.cpp  ldbcache.h  local.css  logger.cpp  logger.h  luahelpers.h  luamodules.cpp  luamodules.h  main.cpp  main.h  news.mdwn  options.cpp  options.h  pex.cpp  pex.h  plot.cpp  plot.h  report.cpp  report.h  repository.cpp  (+16 more)
src/backends/: git.cpp  git.h  mercurial.cpp  mercurial.h  subversion.cpp  subversion.h  subversion_delta.cpp  subversion_p.h
src/documentation/: .gitignore  porting-02-03.mdwn
src/js/: libgithub.js
src/lua/: luadiffstat.h  luahelpers.h  luarepository.h  luarevision.h  plot.cpp  plot.h  report.cpp  report.h
src/lua/gnuplot-cpp/: gnuplot_i.h
src/lua/lunar/: lunar.h
src/lunar/: lunar.h
src/news/: aur-package.mdwn  new-homepage.mdwn  new-packages-debian-ubuntu.mdwn  pepper-0.1.1.mdwn  pepper-0.1.2.mdwn  pepper-0.1.3.mdwn  pepper-0.1.4.mdwn  pepper-0.1.5.mdwn  pepper-0.1.mdwn  pepper-0.2.1.mdwn  pepper-0.2.2.mdwn  pepper-0.2.3.mdwn  pepper-0.2.4.mdwn  pepper-0.2.mdwn  pepper-0.3.1.mdwn  pepper-0.3.2.mdwn  pepper-0.3.3.mdwn  pepper-0.3.mdwn  statistics-web-server.mdwn
src/sys/: fs.cpp  fs.h  thread.cpp  thread.h
src/syslib/: datetime.cpp  datetime.h  fs.cpp  fs.h  io.cpp  io.h  parallel.cpp  parallel.h  sigblock.cpp  sigblock.h
src/templates/: page.tmpl
templates/: index.html
templates/note/: index.html
templates/popup/: index.html
tests/: .gitignore  Makefile.am  atlocal.in  test_backends.at  test_bstreams.at  test_diffstat.at  test_diffstat.pl  test_options.at  test_units.at  test_utils.at  testsuite.at
tests/backends/: Makefile.am  main.cpp  test_subversion.h
tests/bstreams/: Makefile.am  main.cpp
tests/diffstat/: Makefile.am  main.cpp
tests/diffstat/data/: git-add.pat  git-add.ref  git-del.pat  git-mod.pat  git-quotes.pat  git-quotes.ref  svn-add.pat  svn-bin-wronchunk.pat  svn-bin-wronchunk.ref  svn-del.pat  svn-del.ref  svn-mod.pat
tests/options/: Makefile.am  main.cpp
tests/scripts/: cmpdiffs  diffcmp
tests/units/: Makefile.am  main.cpp  test_bstream.h  test_options.h  test_parallel.h  test_strlib.h  test_sys_fs.h  test_sys_io.h  test_utils.h
tests/utils/: Makefile.am  main.cpp
web/: background.xcf  index.html  stylesheet.css
