#
# pepper - SCM statistics report generator
# Copyright (C) 2010-2011 Jonas Gehring
#
# Released under the GNU General Public License, version 3.
# Please see the COPYING file in the source distribution for license
# terms and conditions, or see http://www.gnu.org/licenses/.
#

SUBDIRS = pepper

# Bundled scripts
dist_pkgdata_DATA = \
	activity.lua \
	authors.lua \
	branches.lua \
	commit_scatter.lua \
	commits_per_month.lua \
	csv.lua \
	diffstat.lua \
	directories.lua \
	filetypes.lua \
	loc.lua \
	shortlog.lua
