#
# pepper - SCM statistics report generator
# Copyright (C) 2010-present Jonas Gehring
#
# Released under the GNU General Public License, version 3.
# Please see the COPYING file in the source distribution for license
# terms and conditions, or see http://www.gnu.org/licenses/.
#

SUBDIRS = pepper

# Bundled scripts
dist_pkgdata_DATA = \
	age.lua \
	activity.lua \
	authors.lua \
	authors_pie.lua \
	branches.lua \
	check_cache.lua \
	commit_counts.lua \
	csv.lua \
	data.lua \
	diffstat.lua \
	directories.lua \
	filetypes.lua \
	gui.lua \
	loc.lua \
	participation.lua \
	punchcard.lua \
	shortlog.lua \
	times.lua \
	volume.lua
