#
# pepper - SCM statistics report generator
# Copyright (C) 2010-present Jonas Gehring
#
# Released under the GNU General Public License, version 3.
# Please see the COPYING file in the source distribution for license
# terms and conditions, or see http://www.gnu.org/licenses/.
#

pkgdatadir = $(datadir)/@PACKAGE@/pepper

# Bundled modules
dist_pkgdata_DATA = \
	datetime.lua \
	plotutils.lua
